# Bus-Booking-webapp

./: README.md  docker-compose.yml
backend/: .env  dockerfile  pyproject.toml
backend/docs/: API.md  ARCHITECTURE.md  DATABASE.md  REALTIME.md  SETUP.md
backend/src/: celery_worker.py  database.py  dependencies.py  mail_config.py  mail_utils.py  main.py  models.py  oauth2.py  schemas.py  seed.py  utils.py
backend/src/data/: abctravels_schedule.xlsx
backend/src/routers/: admin.py  auth.py  booking.py  seed.py  trip.py  user.py
frontend/: dockerfile  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/docs/: COMPONENTS.md  STATE.md  STYLING.md
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: axios.js
frontend/src/components/: Navbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  AdminSeed.jsx  BusSeatLayout.jsx  Home.jsx  Login.jsx  MyTickets.jsx  SignUp.jsx  TicketDetail.jsx
frontend/src/utils/: calculateTravelTime.js
